--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,8 +164,8 @@ IF (MOSEK_SOLVER_FOUND)
 
     MESSAGE(STATUS "Will be building MOSEK based solvers.")
 
-    SET(EXAMPLE_MOSEK "stress_matrix_problem")
-    ADD_EXECUTABLE(${EXAMPLE_MOSEK} examples/stress_matrix_problem.cpp examples/test.cpp) 
+    SET(EXAMPLE_MOSEK "StressMatrixProblem")
+    ADD_EXECUTABLE(${EXAMPLE_MOSEK} examples/StressMatrixProblem.cpp examples/main.cpp) 
     SET_TARGET_PROPERTIES(${EXAMPLE_MOSEK} PROPERTIES APPEND_STRING PROPERTY COMPILE_FLAGS "-DMOSEK_SOLVER")
     TARGET_LINK_LIBRARIES(${EXAMPLE_MOSEK} ${MOSEK_LIBRARY})
     TARGET_LINK_LIBRARIES(${EXAMPLE_MOSEK} ${CMAKE_THREAD_LIBS_INIT})
@@ -176,8 +176,8 @@ IF (CSDP_SOLVER_FOUND)
 
     MESSAGE(STATUS "Will be building CSDP based solvers.")
 
-    SET(EXAMPLE_CSDP "stress_matrix_problem")
-    ADD_EXECUTABLE(${EXAMPLE_CSDP} examples/stress_matrix_problem.cpp examples/test.cpp) 
+    SET(EXAMPLE_CSDP "StressMatrixProblem")
+    ADD_EXECUTABLE(${EXAMPLE_CSDP} examples/StressMatrixProblem.cpp examples/main.cpp) 
     SET_TARGET_PROPERTIES(${EXAMPLE_CSDP} PROPERTIES APPEND_STRING PROPERTY COMPILE_FLAGS "-DCSDP_SOLVER")
     TARGET_LINK_LIBRARIES(${EXAMPLE_CSDP} ${CSDP_LIBRARY})
     TARGET_LINK_LIBRARIES(${EXAMPLE_CSDP} ${LAPACK_LIBRARIES})
@@ -188,8 +188,8 @@ ENDIF (CSDP_SOLVER_FOUND)
 IF (SDPA_SOLVER_FOUND) 
     MESSAGE(STATUS "Will be building SDPA based solvers.")
 
-    SET(EXAMPLE_SDPA "stress_matrix_problem")
-    ADD_EXECUTABLE(${EXAMPLE_SDPA} examples/stress_matrix_problem.cpp examples/test.cpp) 
+    SET(EXAMPLE_SDPA "StressMatrixProblem")
+    ADD_EXECUTABLE(${EXAMPLE_SDPA} examples/StressMatrixProblem.cpp examples/main.cpp) 
     SET_TARGET_PROPERTIES(${EXAMPLE_SDPA} PROPERTIES APPEND_STRING PROPERTY COMPILE_FLAGS "-DSDPA_SOLVER")
     TARGET_LINK_LIBRARIES(${EXAMPLE_SDPA} ${SDPA_LIBRARY})
     TARGET_LINK_LIBRARIES(${EXAMPLE_SDPA} ${LAPACK_LIBRARIES})
